// The greeting service definition.

syntax = "proto3";

option go_package = "go-grpc/todo";

service TodoService {
    rpc AddToDo (TodoAddRequest) returns (TodoResponse) {}
    rpc GetToDo (GetToDoRequest) returns (TodoResponses){}
    rpc GetOneToDo(GetOneToDoResquest) returns(TodoResponse){}
    rpc EditTodDo(EditTodDoResquest) returns (TodoResponse){}
    rpc DeleteTodDo(DeleteToDoResquest) returns (TodoResponse){}

  }

message TodoAddRequest {
  string title = 1;
  string content = 2;
  bool is_completed = 3;
}
message TodoResponse {
  string todo_id = 1;
  string titel = 2;
  string content = 3;
  bool is_completed = 4;
}

message TodoResponses{
 repeated TodoResponse data = 1;
 GetToDoRequest pagination = 2;
}

message GetToDoRequest{
  string keyword = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetOneToDoResquest {
  string todo_id = 1;
}

message DeleteToDoResquest {
  string todo_id = 1;
}

message EditTodDoResquest {
  string todo_id = 1;
  string titel = 2;
  string content = 3;
  bool is_completed = 4;
}